--- a/Bierbank/View/BierToevoegen.xaml
+++ b/Bierbank/View/BierToevoegen.xaml
@@ -3,11 +3,22 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      DataContext="{Binding Source={StaticResource ViewModelLocator},  Path=BierToevoegenModel}"
       xmlns:local="clr-namespace:Bierbank.View"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="BierToevoegen">
 
+    <Page.Resources>
+        <Style TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="true">
+                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Page.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -23,10 +34,10 @@
         </Grid.ColumnDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" FontSize="15" Content="Naam:"/>
-        <TextBox Grid.Row="0" Grid.Column="1" FontSize="15" Name="textBoxNaam"/>
+        <TextBox Grid.Row="0" Grid.Column="1" FontSize="15" Name="textBoxNaam" Text="{Binding SelectedBiertje.Naam, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
 
         <Label Grid.Row="1" Grid.Column="0" FontSize="15" Content="Soort:"/>
-        <TextBox Grid.Row="1" Grid.Column="1" FontSize="15" Name="textBoxSoort"/>
+        <TextBox Grid.Row="1" Grid.Column="1" FontSize="15" Name="textBoxSoort" Text="{Binding SelectedBiertje.Soort, Mode=TwoWay}"/>
 
         <Label Grid.Row="2" Grid.Column="0" FontSize="15" Content="Percentage:">
             <Label.ToolTip>
@@ -37,15 +48,15 @@
                 </ToolTip>
             </Label.ToolTip>
         </Label>
-        <TextBox Grid.Row="2" Grid.Column="1" FontSize="15" Name="textBoxPercentage"/>
+        <TextBox Grid.Row="2" Grid.Column="1" FontSize="15" Name="textBoxPercentage" Text="{Binding SelectedBiertje.Percentage, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
 
         <Label Grid.Row="3" Grid.Column="0" FontSize="15" Content="Brouwerij:"/>
-        <TextBox Grid.Row="3" Grid.Column="1" FontSize="15" Name="textBoxBrouwerij"/>
+        <TextBox Grid.Row="3" Grid.Column="1" FontSize="15" Name="textBoxBrouwerij" Text="{Binding SelectedBiertje.Brouwerij, Mode=TwoWay}"/>
 
         <Label Grid.Row="4" Grid.Column="0" FontSize="15" Content="Image:"/>
-        <TextBox Grid.Row="4" Grid.Column="1" FontSize="15" Name="textBoxImage"/>
+        <TextBox Grid.Row="4" Grid.Column="1" FontSize="15" Name="textBoxImage" Text="{Binding SelectedBiertje.Image, Mode=TwoWay}"/>
 
-        <Button Grid.Row="5" Grid.Column="1" Name="KnopToevoegen" Content="Bier toevoegen" Style="{DynamicResource ToolBarButton}" Click="KnopToevoegen_Click"/>
+        <Button Grid.Row="5" Grid.Column="1" Name="KnopToevoegen" Content="Bier toevoegen" Style="{DynamicResource ToolBarButton}" Command="{Binding InsertCommand}" Click="KnopToevoegen_Click"/>
 
         <Popup Grid.Row="0" Grid.Column="0" Name="Popup" Width="200" Height="100" IsOpen="False" VerticalAlignment="Top">
             <Border BorderBrush="Black" BorderThickness="2">
