--- a/Bierbank/View/BierenOverzicht.xaml
+++ b/Bierbank/View/BierenOverzicht.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
       xmlns:local="clr-namespace:Bierbank.View"
       xmlns:viewmodel="clr-namespace:Bierbank.ViewModel"
       mc:Ignorable="d" 
@@ -14,7 +15,7 @@
     </Page.Resources>
 
     <Grid DataContext="{StaticResource MenuViewModel}">
-        <ListView Margin="20" ItemsSource="{Binding Biertjes}">
+        <ListView Margin="20" ItemsSource="{Binding Biertjes}" SelectedItem="{Binding SelectedBiertje}" MouseDoubleClick="ListView_MouseDoubleClick">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="5">
@@ -35,6 +36,12 @@
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
+
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding WeergevenCommand}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
         </ListView>
     </Grid>
 </Page>
