--- a/Bierbank/View/BierDetail.xaml
+++ b/Bierbank/View/BierDetail.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
       xmlns:local="clr-namespace:Bierbank.View"
       DataContext="{Binding Source={StaticResource ViewModelLocator},  Path=BierDetailModel}"
       mc:Ignorable="d" 
@@ -33,10 +34,10 @@
         </Grid.ColumnDefinitions>
 
         <Label Grid.Row="0" FontSize="15" Content="Naam:"/>
-        <TextBox Grid.Row="0" FontSize="15" Width="300" Text="{Binding SelectedBiertje.Naam, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
+        <TextBox Grid.Row="0" FontSize="15" Width="300" Margin="20" Text="{Binding SelectedBiertje.Naam, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
 
         <Label Grid.Row="1" FontSize="15" Content="Soort:"/>
-        <TextBox Grid.Row="1" FontSize="15" Width="300" Text="{Binding SelectedBiertje.Soort, Mode=TwoWay}"/>
+        <TextBox Grid.Row="1" FontSize="15" Width="300" Margin="20" Text="{Binding SelectedBiertje.Soort, Mode=TwoWay}"/>
 
         <Label Grid.Row="2" FontSize="15" Content="Percentage:">
             <Label.ToolTip>
@@ -47,35 +48,39 @@
                 </ToolTip>
             </Label.ToolTip>
         </Label>
-        <TextBox Grid.Row="2" FontSize="15" Width="300" Text="{Binding SelectedBiertje.Percentage, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
+        <TextBox Grid.Row="2" FontSize="15" Width="300" Margin="20" Text="{Binding SelectedBiertje.Percentage, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
 
         <Label Grid.Row="3" FontSize="15" Content="Brouwerij:"/>
-        <TextBox Grid.Row="3" FontSize="15" Width="300" Text="{Binding SelectedBiertje.Brouwerij, Mode=TwoWay}"/>
+        <TextBox Grid.Row="3" FontSize="15" Width="300" Margin="20" Text="{Binding SelectedBiertje.Brouwerij, Mode=TwoWay}"/>
 
         <Label Grid.Row="4" FontSize="15" Content="Image:"/>
-        <TextBox Grid.Row="4" FontSize="15" Width="300" Text="{Binding SelectedBiertje.Image, Mode=TwoWay}"/>
+        <TextBox Grid.Row="4" FontSize="15" Width="300" Margin="20" Text="{Binding SelectedBiertje.Image, Mode=TwoWay}"/>
+
+        <Label Grid.Row="2" Grid.Column="1" FontSize="15" Content="Notes bij dit bier:" VerticalAlignment="Bottom"/>
+        <ListView Grid.Row="3" Grid.Column="1" Name="ListViewNotes" ItemsSource="{Binding BierNotes}" SelectedItem="{Binding SelectedBierNote}"  MouseDoubleClick="ListViewNotes_MouseDoubleClick">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Label FontSize="10" Content="{Binding Onderwerp}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding WeergevenCommand}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ListView>
 
         <TextBlock Name="ImageName" Visibility="Collapsed" Text="{Binding SelectedBiertje.Image, StringFormat=images/{0}}" />
 
-        <Button Grid.Row="0" Grid.Column="1" Name="KnopWijzigen" Content="Wijzigen" Style="{DynamicResource ToolBarButton}" Command="{Binding WijzigenCommand}"/>
+        <Button Grid.Row="0" Grid.Column="1" Name="KnopWijzigen" Content="Wijzigen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding WijzigenCommand}"/>
 
-        <Button Grid.Row="1" Grid.Column="1" Name="KnopVerwijderen" Content="Verwijderen" Style="{DynamicResource ToolBarButton}" Command="{Binding DeleteCommand}" Click="KnopVerwijderen_Click"/>
+        <Button Grid.Row="1" Grid.Column="1" Name="KnopVerwijderen" Content="Verwijderen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding DeleteCommand}" Click="KnopVerwijderen_Click"/>
 
-        <Border Width="100"  BorderBrush="Wheat" BorderThickness="2" CornerRadius="8,8,8,8" Grid.Row="4" Grid.Column="1">
-            <Rectangle Stroke="Black" StrokeThickness="1" RadiusX="8" RadiusY="8">
-                <Rectangle.Fill>
-                    <ImageBrush ImageSource="{Binding Text, ElementName=ImageName}"/>
-                </Rectangle.Fill>
-            </Rectangle>
-        </Border>
-
-        <Popup Name="Popup" Width="225" Height="100" IsOpen="False" PlacementTarget="{Binding ElementName=MainPanel}" Placement="Center">
-            <Border BorderBrush="Black" BorderThickness="2">
-                <StackPanel Background="{DynamicResource ToolBarKleur}">
-                    <Label Foreground="{DynamicResource LetterKleur}" FontSize="15"  Content="Bier verwijdert uit de databank!"/>
-                    <Button Name="KnopClosePopup" Content="OK" Style="{DynamicResource ToolBarButton}" Click="KnopClosePopup_Click"/>
-                </StackPanel>
-            </Border>
-        </Popup>
+        <Rectangle Width="100" RadiusX="8" RadiusY="8" Grid.Row="4" Grid.Column="1">
+            <Rectangle.Fill>
+                <ImageBrush ImageSource="{Binding Text, ElementName=ImageName}"/>
+            </Rectangle.Fill>
+        </Rectangle>
     </Grid>
 </Page>
