--- a/Bierbank/View/BierToevoegen.xaml
+++ b/Bierbank/View/BierToevoegen.xaml
@@ -34,10 +34,10 @@
         </Grid.ColumnDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" FontSize="15" Content="Naam:"/>
-        <TextBox Grid.Row="0" Grid.Column="1" FontSize="15" Name="textBoxNaam" Text="{Binding SelectedBiertje.Naam, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
+        <TextBox Grid.Row="0" Grid.Column="1" FontSize="15" Name="textBoxNaam" Margin="20" Text="{Binding SelectedBiertje.Naam, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
 
         <Label Grid.Row="1" Grid.Column="0" FontSize="15" Content="Soort:"/>
-        <TextBox Grid.Row="1" Grid.Column="1" FontSize="15" Name="textBoxSoort" Text="{Binding SelectedBiertje.Soort, Mode=TwoWay}"/>
+        <TextBox Grid.Row="1" Grid.Column="1" FontSize="15" Name="textBoxSoort" Margin="20" Text="{Binding SelectedBiertje.Soort, Mode=TwoWay}"/>
 
         <Label Grid.Row="2" Grid.Column="0" FontSize="15" Content="Percentage:">
             <Label.ToolTip>
@@ -48,15 +48,15 @@
                 </ToolTip>
             </Label.ToolTip>
         </Label>
-        <TextBox Grid.Row="2" Grid.Column="1" FontSize="15" Name="textBoxPercentage" Text="{Binding SelectedBiertje.Percentage, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
+        <TextBox Grid.Row="2" Grid.Column="1" FontSize="15" Name="textBoxPercentage" Margin="20" Text="{Binding SelectedBiertje.Percentage, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
 
         <Label Grid.Row="3" Grid.Column="0" FontSize="15" Content="Brouwerij:"/>
-        <TextBox Grid.Row="3" Grid.Column="1" FontSize="15" Name="textBoxBrouwerij" Text="{Binding SelectedBiertje.Brouwerij, Mode=TwoWay}"/>
+        <TextBox Grid.Row="3" Grid.Column="1" FontSize="15" Name="textBoxBrouwerij" Margin="20" Text="{Binding SelectedBiertje.Brouwerij, Mode=TwoWay}"/>
 
         <Label Grid.Row="4" Grid.Column="0" FontSize="15" Content="Image:"/>
-        <TextBox Grid.Row="4" Grid.Column="1" FontSize="15" Name="textBoxImage" Text="{Binding SelectedBiertje.Image, Mode=TwoWay}"/>
+        <TextBox Grid.Row="4" Grid.Column="1" FontSize="15" Name="textBoxImage" Margin="20" Text="{Binding SelectedBiertje.Image, Mode=TwoWay}"/>
 
-        <Button Grid.Row="5" Grid.Column="1" Name="KnopToevoegen" Content="Bier toevoegen" Style="{DynamicResource ToolBarButton}" Command="{Binding InsertCommand}" Click="KnopToevoegen_Click"/>
+        <Button Grid.Row="5" Grid.Column="1" Name="KnopToevoegen" Content="Bier toevoegen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding InsertCommand}" Click="KnopToevoegen_Click"/>
 
         <Popup Name="Popup" Width="200" Height="100" IsOpen="False" PlacementTarget="{Binding ElementName=MainPanel}" Placement="Center">
             <Border BorderBrush="Black" BorderThickness="2">
