--- a/Bierbank/View/MainWindow.xaml
+++ b/Bierbank/View/MainWindow.xaml
@@ -8,10 +8,15 @@
         Title="MainWindow" Height="600" Width="800">
     <DockPanel>
         <ToolBar Background="{DynamicResource ToolBarKleur}" DockPanel.Dock="Top">
-            <Label FontSize="20" Margin="8" Padding="8" Foreground="{DynamicResource LetterKleur}" Content="Bierbank"/>
+            <Rectangle Width="100" RadiusX="8" RadiusY="8" MouseDown="Rectangle_MouseDown">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="../Images/logo.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
+            <!-- <Label FontSize="20" Margin="8" Padding="8" Foreground="{DynamicResource LetterKleur}" Content="Bierbank"/> -->
             <Button Name="ButtonBack" Content="Terug" Style="{DynamicResource ToolBarButton}" Click="ButtonBack_Click"/>
             <Button Name="ButtonForward" Content="Verder" Style="{DynamicResource ToolBarButton}" Click="ButtonForward_Click"/>
-            <Button Name="KnopToevoegen" Content="Bier toevoegen" Style="{DynamicResource ToolBarButton}" Click="KnopToevoegen_Click"/>
+            <Button Name="KnopBierNotes" Content="Bier notes" Style="{DynamicResource ToolBarButton}" Click="KnopBierNotes_Click"/>
         </ToolBar>
 
         <Frame Source="BierenOverzicht.xaml" Name="frame" NavigationUIVisibility="Hidden" >
