--- a/Bierbank/View/BierenOverzicht.xaml
+++ b/Bierbank/View/BierenOverzicht.xaml
@@ -5,16 +5,12 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
       xmlns:local="clr-namespace:Bierbank.View"
-      xmlns:viewmodel="clr-namespace:Bierbank.ViewModel"
+      DataContext="{Binding Source={StaticResource ViewModelLocator},  Path=BierenOverzichtModel}"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
       Title="BierenOverzicht">
 
-    <Page.Resources>
-        <viewmodel:BierenOverzichtModel x:Key="MenuViewModel" />
-    </Page.Resources>
-
-    <Grid DataContext="{StaticResource MenuViewModel}">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="60"/>
