--- a/Bierbank/View/BierenOverzicht.xaml
+++ b/Bierbank/View/BierenOverzicht.xaml
@@ -20,9 +20,9 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="5">
-                        <TextBlock Name="ImageName" Visibility="Collapsed" Text="{Binding Image, StringFormat=images/{0}}" />
+                        <TextBlock Name="ImageName" Visibility="Collapsed" Text="{Binding Image}" />
 
-                        <Rectangle Width="50" Stroke="{DynamicResource ToolBarKleur}" StrokeThickness="2" RadiusX="8" RadiusY="8">
+                        <Rectangle Height="60" Width="50" Stroke="{DynamicResource ToolBarKleur}" StrokeThickness="2" RadiusX="8" RadiusY="8">
                             <Rectangle.Fill>
                                 <ImageBrush ImageSource="{Binding Text, ElementName=ImageName}"/>
                             </Rectangle.Fill>
