--- a/Bierbank/View/BierInLijstOverzicht.xaml
+++ b/Bierbank/View/BierInLijstOverzicht.xaml
@@ -28,7 +28,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <DockPanel Margin="5">
-                            <TextBlock Name="ImageName" Visibility="Collapsed" Text="{Binding Image, StringFormat=images/{0}}" />
+                            <TextBlock Name="ImageName" Visibility="Collapsed" Text="{Binding Image}" />
 
                             <Rectangle Width="50" Stroke="{DynamicResource ToolBarKleur}" StrokeThickness="2" RadiusX="8" RadiusY="8">
                                 <Rectangle.Fill>
