--- a/Bierbank/View/BierDetail.xaml
+++ b/Bierbank/View/BierDetail.xaml
@@ -72,7 +72,7 @@
 
         <TextBlock Name="ImageName" Visibility="Collapsed" Text="{Binding SelectedBiertje.Image}" />
 
-        <Button Grid.Row="0" Grid.Column="1" Name="KnopWijzigen" Content="Wijzigen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding WijzigenCommand}" Click="KnopWijzigen_Click"/>
+        <Button Grid.Row="0" Grid.Column="1" Name="KnopWijzigen" Content="Wijzigen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding WijzigenCommand}"/>
 
         <Button Grid.Row="1" Grid.Column="1" Name="KnopVerwijderen" Content="Verwijderen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding DeleteCommand}" Click="KnopVerwijderen_Click"/>
 
