--- a/Bierbank/View/BierInLijstOverzicht.xaml
+++ b/Bierbank/View/BierInLijstOverzicht.xaml
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
-            <TextBox FontSize="15" Width="300" Margin="5" Text="{Binding SelectedLijst.Naam, Mode=TwoWay}"/>
+            <TextBox FontSize="15" Width="300" Margin="5" Text="{Binding SelectedLijst.Naam, Mode=TwoWay, ValidatesOnDataErrors=True}"/>
             <Button Name="KnopAanpassen" Content="Naam wijzigen" Command="{Binding WijzigenCommand}" Style="{DynamicResource ToolBarButton}"/>
             <Button Name="KnopVerwijderen" Content="Lijst verwijderen" Command="{Binding DeleteCommand}" Style="{DynamicResource ToolBarButton}" Click="KnopVerwijderen_Click"/>
         </StackPanel>
