--- a/Bierbank/View/BierenOverzicht.xaml
+++ b/Bierbank/View/BierenOverzicht.xaml
@@ -11,11 +11,14 @@
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
             <RowDefinition/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
 
-        <ListView Grid.Row="0" Margin="20" ItemsSource="{Binding Biertjes}" SelectedItem="{Binding SelectedBiertje}" MouseDoubleClick="ListView_MouseDoubleClick">
+        <TextBox Grid.Row="0" Margin="20" Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <ListView Grid.Row="1" Margin="20" ItemsSource="{Binding Biertjes}" SelectedItem="{Binding SelectedBiertje}" MouseDoubleClick="ListView_MouseDoubleClick">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="5">
@@ -42,7 +45,7 @@
             </i:Interaction.Triggers>
         </ListView>
 
-        <Button Grid.Row="1" Name="KnopToevoegen" Content="Bier toevoegen" Style="{DynamicResource ToolBarButton}" Click="KnopToevoegen_Click"/>
+        <Button Grid.Row="2" Name="KnopToevoegen" Content="Bier toevoegen" Style="{DynamicResource ToolBarButton}" Click="KnopToevoegen_Click"/>
     </Grid>
 </Page>
 
