--- a/Bierbank/View/BierDetail.xaml
+++ b/Bierbank/View/BierDetail.xaml
@@ -56,7 +56,7 @@
         <Button Grid.Row="4" Width="300" Content="Image veranderen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding ImageUploadCommand}"/>
 
         <Label Grid.Row="2" Grid.Column="1" FontSize="15" Content="Notes bij dit bier:" VerticalAlignment="Bottom"/>
-        <ListView Grid.Row="3" Grid.Column="1" Name="ListViewNotes" ItemsSource="{Binding BierNotes}" SelectedItem="{Binding SelectedBierNote}"  MouseDoubleClick="ListViewNotes_MouseDoubleClick">
+        <ListView Grid.Row="3" Grid.Column="1" Name="ListViewNotes" ItemsSource="{Binding BierNotes}" SelectedItem="{Binding SelectedBierNote}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Label FontSize="10" Content="{Binding Onderwerp}"/>
@@ -74,7 +74,7 @@
 
         <Button Grid.Row="0" Grid.Column="1" Name="KnopWijzigen" Content="Wijzigen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding WijzigenCommand}"/>
 
-        <Button Grid.Row="1" Grid.Column="1" Name="KnopVerwijderen" Content="Verwijderen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding DeleteCommand}" Click="KnopVerwijderen_Click"/>
+        <Button Grid.Row="1" Grid.Column="1" Name="KnopVerwijderen" Content="Verwijderen" Margin="20" Style="{DynamicResource ToolBarButton}" Command="{Binding DeleteCommand}"/>
 
         <Rectangle Width="100" RadiusX="8" RadiusY="8" Grid.Row="4" Grid.Column="1">
             <Rectangle.Fill>
