--- a/Bierbank/View/LijstenOverzicht.xaml
+++ b/Bierbank/View/LijstenOverzicht.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
 
-        <ListView Grid.Row="0" Margin="20" ItemsSource="{Binding Lijsten}" SelectedItem="{Binding SelectedLijst}" MouseDoubleClick="ListView_MouseDoubleClick">
+        <ListView Grid.Row="0" Margin="20" ItemsSource="{Binding Lijsten}" SelectedItem="{Binding SelectedLijst}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Label FontSize="15" Content="{Binding Naam}"/>
@@ -29,6 +29,6 @@
             </i:Interaction.Triggers>
         </ListView>
 
-        <Button Grid.Row="1" Name="KnopToevoegen" Content="Lijst toevoegen" Style="{DynamicResource ToolBarButton}" Click="KnopToevoegen_Click"/>
+        <Button Grid.Row="1" Name="KnopToevoegen" Content="Lijst toevoegen" Style="{DynamicResource ToolBarButton}" Command="{Binding ToevoegenCommand}"/>
     </Grid>
 </Page>
